user profile image upload added to routes and model
