# api/openapi.yaml
@@ -1,30 +1,25 @@
 openapi: 3.0.1
 info:
   title: User API
+  version: 1.0.0
   description: API endpoints to communicate with user data
   contact:
+    email: fmg3ckali@gmail.com
     name: Nathaniel Cobbinah
     url: https://shy-lime-dibbler-garb.cyclic.app/
-    email: fmg3ckali@gmail.com
   license:
     name: MIT
     url: https://choosealicense.com/licenses/mit/
-  version: 1.0.0
-servers:
-- url: /
 paths:
   /api/users:
     summary: Endpoint used to create or list users in the system
     description: Registers a new user or retrieves all users in the system
     get:
-      tags:
-      - User
       summary: Retrieve all user records from the system
       description: List all current registered users in the system
       operationId: list
       responses:
-        "200":
-          description: Fetches all user records from the system
+        '200':
           content:
             application/json:
               examples:
@@ -38,12 +33,12 @@ paths:
                             "created": "2022-08-10T08:06:39.754Z"
                         }
                     ]
+          description: Fetches all user records from the system
         default:
           description: Default error sample response
-      x-swagger-router-controller: User
-    post:
       tags:
-      - User
+        - User
+    post:
       summary: Creates a new user record into the system
       description: Creates a new User registered account in  the system
       operationId: create
@@ -55,124 +50,184 @@ paths:
               $ref: '#/components/schemas/User'
         required: true
       responses:
-        "201":
-          description: Creates a new user account in the system
+        '201':
           content:
             application/json:
               examples:
                 User Account created successfully:
-                  value: "{ \n \"name\":\"John Smith\",\n \"email\":\"john@smith.info\"\
-                    ,\n}"
+                  value: |-
+                    { 
+                     "name":"John Smith",
+                     "email":"john@smith.info",
+                    }
+          description: Creates a new user account in the system
         default:
           description: Default error sample response
-      x-swagger-router-controller: User
+      tags:
+        - User
   /api/users/{userId}:
-    summary: "Endpoint used to retrieve a single userRecord, update userRecord or\
-      \ delete userRecord if user is loggedIn successfully"
+    summary: >-
+      Endpoint used to retrieve a single userRecord, update userRecord or delete
+      userRecord if user is loggedIn successfully
     description: A verified loggedIn user can only perform operations on this urlPath
     get:
-      tags:
-      - User
       summary: Retrieves user Information
-      description: "Retrieves a valid registered user in the system, who wants to\
-        \ view own records"
+      description: >-
+        Retrieves a valid registered user in the system, who wants to view own
+        records
       operationId: read
       parameters:
-      - name: userId
-        in: path
-        description: The userId of the user.
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
+        - name: userId
+          in: path
+          description: The userId of the user.
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
       responses:
-        "200":
-          description: Retrieved a loggedIn user information
+        '200':
           content:
             application/json:
               examples:
                 User Information retrieved successfully:
-                  value: "{ \n \"name\":\"John Smith\",\n \"email\":\"john@smith.info\"\
-                    ,\n}"
+                  value: |-
+                    { 
+                     "name":"John Smith",
+                     "email":"john@smith.info",
+                    }
+          description: Retrieved a loggedIn user information
         default:
           description: Default error sample response
-      security:
-      - bearerAuth: []
-      x-swagger-router-controller: User
-    put:
       tags:
-      - User
+        - User
+      security:
+        - bearerAuth: []
+    put:
       summary: Update user record
-      description: Updates a verified user who is loggedIn and wants to edit his/her
+      description: >-
+        Updates a verified user who is loggedIn and wants to edit his/her
         records
       operationId: update
       parameters:
-      - name: userId
-        in: path
-        description: The userId of the user.
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
+        - name: userId
+          in: path
+          description: The userId of the user.
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
       requestBody:
         description: A new order object
         content:
-          application/json:
+          multipart/form-data:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UserUpdate'
         required: true
       responses:
-        "200":
-          description: Updates a loggedIn user record
+        '200':
           content:
             application/json:
               examples:
                 User Record updated Successfully:
-                  value: "{ \n \"name\":\"John Smith\",\n \"email\":\"john@smith.info\"\
-                    ,\n \"updated\": \"24232423242\",\n}"
+                  value: |-
+                    { 
+                     "name":"John Smith",
+                     "email":"john@smith.info",
+                     "updated": "24232423242",
+                    }
+          description: Updates a loggedIn user record
         default:
           description: Default error sample response
-      security:
-      - bearerAuth: []
-      x-swagger-router-controller: User
-    delete:
       tags:
-      - User
+        - User
+      security:
+        - bearerAuth: []
+    delete:
       summary: Delete a user from the system
-      description: "Deletes a verified loggedIn user, who wants to delete account\
-        \ permanently from the system"
+      description: >-
+        Deletes a verified loggedIn user, who wants to delete account
+        permanently from the system
       operationId: remove
       parameters:
-      - name: userId
-        in: path
-        description: The userId of the user.
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
+        - name: userId
+          in: path
+          description: The userId of the user.
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
       responses:
-        "200":
-          description: Removes a user account from the system
+        '200':
           content:
             application/json:
               examples:
                 User Record deleted successfully:
-                  value: "{ \n \"name\":\"John Smith\",\n \"email\":\"john@smith.info\"\
-                    ,\n}"
+                  value: |-
+                    { 
+                     "name":"John Smith",
+                     "email":"john@smith.info",
+                    }
+          description: Removes a user account from the system
         default:
           description: Default error sample response
+      tags:
+        - User
       security:
-      - bearerAuth: []
-      x-swagger-router-controller: User
+        - bearerAuth: []
+  /api/users/photo/{userId}:
+    get:
+      summary: Retrieves User Profile Photo
+      description: >-
+        Retrieves signedIn User profile photo using user generated
+        identifier(userId)
+      operationId: photo
+      parameters:
+        - name: userId
+          in: path
+          description: The userId of the user.
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: An image file for user profile photo
+          content:
+            image/*:
+              schema:
+                type: string
+                format: binary
+        default:
+          description: Default error sample response
+      tags:
+        - User Profile Photo
+  /api/users/defaultPhoto:
+    get:
+      summary: 'Retrieves system default Profile Photo '
+      description: >-
+        Retrieves system default profile photo for users if they do not have one
+        uploaded on their Profile
+      operationId: defaultPhoto
+      responses:
+        '200':
+          description: An image file for user profile photo
+          content:
+            image/*:
+              schema:
+                type: string
+                format: binary
+        default:
+          description: Default error sample response
+      tags:
+        - User Profile Photo
   /auth/signin:
     summary: Login to userAccount
     description: A registered User can login using this endpoint
     post:
-      tags:
-      - User Authentication
       summary: User Login entry into the system
       description: Verifies user credentials and allow entry into the system
       operationId: signin
@@ -184,38 +239,43 @@ paths:
               $ref: '#/components/schemas/UserLogin'
         required: true
       responses:
-        "200":
-          description: logs in a verified user into the system
+        '200':
           content:
             application/json:
               examples:
                 Login successful:
-                  value: "{ \n \"id\": \"xxxxxxxxxx\",\n \"name\":\"John Smith\",\n\
-                    \ \"email\":\"john@smith.info\",\n}"
+                  value: |-
+                    { 
+                     "id": "xxxxxxxxxx",
+                     "name":"John Smith",
+                     "email":"john@smith.info",
+                    }
+          description: logs in a verified user into the system
         default:
           description: Default error sample response
-      x-swagger-router-controller: UserAuthentication
+      tags:
+        - User Authentication
   /auth/signout:
     summary: Endpoint to logout user from the system
-    description: "Clears userToken, thus logging out user from the system"
+    description: Clears userToken, thus logging out user from the system
     get:
-      tags:
-      - User Authentication
       summary: Logout user from the system
-      description: "Clear validToken, and disable access to userInfo unless user is\
-        \ loggedIn again"
+      description: >-
+        Clear validToken, and disable access to userInfo unless user is loggedIn
+        again
       operationId: signout
       responses:
-        "200":
-          description: Clears userToken from the system
+        '200':
           content:
             application/json:
               examples:
                 User signed out successfully:
                   value: signed out
+          description: Clears userToken from the system
         default:
           description: Default error sample response
-      x-swagger-router-controller: UserAuthentication
+      tags:
+        - User Authentication
 components:
   schemas:
     User:
@@ -238,6 +298,22 @@ components:
           type: string
       xml:
         name: UserLogin
+    UserUpdate:
+      type: object
+      properties:
+        name:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+        about:
+          type: string
+        photo:
+          type: string
+          format: binary
+      xml:
+        name: UserUpdate
   securitySchemes:
     bearerAuth:
       type: http
