# server/models/user.model.js
@@ -35,7 +35,15 @@ const UserSchema = new Schema({
         type: String,
         required: "Password is required"
     },
-    salt: String
+    salt: String,
+    about:{
+        type:String,
+        trim: true
+    },
+    photo:{
+        data: Buffer,
+        contentType: String,
+    }
 })
 
 UserSchema.virtual('password')
